Grandeza de Guanajuato Olímpico
Nueva sección en el menú 'Guanajuato Histórico', dedicado a recopilar los logros de guanajuatenses en olimpiadas de matemáticas a nivel nacional e internacional

--- a/_config.yml
+++ b/_config.yml
@@ -48,6 +48,9 @@ collections:
   olimpiadas_nacionales:
     output: true
     permalink: '/:name/'
+  hall_of_fame:
+    output: true
+    permalink: '/:name/'
   entrenamientos:
   libros:
   selectivos_obm:
