Historic data maintenance

--- a/_data/omm_guanajuato_historico.yml
+++ b/_data/omm_guanajuato_historico.yml
@@ -183,7 +183,7 @@
   - name: Isaac Pancardo Botello
     achievement: Bronce
   - name: Rubén Pérez Palacios
-    achievement: 
+    achievement: Mención Honorífica
   - name: Nathalia del Carmen Jasso Vera
     achievement: Plata
   - name: Sebastian Sánchez Lara
