--- a/_data/omm_guanajuato_historico.yml
+++ b/_data/omm_guanajuato_historico.yml
@@ -30,11 +30,11 @@
   team:
   - name: Rocío Gabriela Anguiano Soria
     achievement: 
-  - name: Armando Galvan Hernánndez
+  - name: Armando Galvan Hernández
     achievement: Plata
   - name: Luis Enrique Osorio Puentes
     achievement: Bronce
-  - name: Alberto José Ramíırez Valadez
+  - name: Alberto José Ramírez Valadez
     achievement: Plata
   - name: María Teresa Rodríguez Estrada
     achievement: 
@@ -45,7 +45,7 @@
   team:
   - name: Joshua Ayork Acevedo Carabantes
     achievement: Mención Honorífica
-  - name: Gabriel Gutierrez Ramírez
+  - name: Gabriel Gutiérrez Ramírez
     achievement: Mención Honorífica
   - name: Mario Enrique Negrete García
     achievement: Mención Honorífica
@@ -53,7 +53,7 @@
     achievement: Plata
   - name: Ariana Alesia Sandoval Partida
     achievement: Bronce
-  - name: Hilda de Jesus Terrones Segura
+  - name: Hilda de Jesús Terrones Segura
     achievement: 
 
 - year: 2009
@@ -66,7 +66,7 @@
     achievement: Plata
   - name: Jonathan Peuling Prevost
     achievement: Mención Honorífica
-  - name: Victoria de Jesus Terrones Segura
+  - name: Victoria de Jesús Terrones Segura
     achievement: Bronce
   - name: Jonatan Zepahua Jimenez
     achievement: 
@@ -81,7 +81,7 @@
     achievement: Bronce
   - name: Christian Dennis Olvera Torres
     achievement: 
-  - name: Victoria de Jesus Terrones Segura
+  - name: Victoria de Jesús Terrones Segura
     achievement: Plata
   - name: Gerardo Zago Yáñez
     achievement: Plata
@@ -90,7 +90,7 @@
   team:
   - name: Francisco Gerardo Martínez Palacios
     achievement: Bronce
-  - name: Ulises Perez Cendejas
+  - name: Ulises Pérez Cendejas
     achievement: Bronce
   - name: Christian Dennis Olvera Torres
     achievement: Bronce
@@ -107,13 +107,13 @@
     achievement: Oro
   - name: Ramón Ivían Garcia Alvarez
     achievement: Oro
-  - name: Diego Aarón Moreno Galvan
+  - name: Diego Aarón Moreno Galván
     achievement: Bronce
-  - name: Ulises Perez Cendejas
+  - name: Ulises Pérez Cendejas
     achievement: Bronce
   - name: Emmanuel Romero Ruiz
     achievement: Bronce
-  - name: Victoria de Jesus Terrones Segura
+  - name: Victoria de Jesús Terrones Segura
     achievement: Bronce
 
 - year: 2013
@@ -197,7 +197,7 @@
     achievement: Oro
   - name: Jesús Omar Sistos Barrón
     achievement: Oro
-  - name: Sebastián Sánchez Lara
+  - name: Sebastian Sánchez Lara
     achievement: Plata
   - name: Nathalia del Carmen Jasso Vera
     achievement: Bronce
@@ -216,9 +216,9 @@
     achievement: Plata
   - name: Nathalia del Carmen Jasso Vera
     achievement: Plata
-  - name: Hector Fernando Ricardez Lara
+  - name: Héctor Fernando Ricárdez Lara
     achievement: Plata
-  - name: Joshua Sebastián Gonzalez Torres
+  - name: Joshua Sebastián González Torres
     achievement: Bronce
 
 - year: 2020
