--- a/_data/ommeb_guanajuato_historico.yml
+++ b/_data/ommeb_guanajuato_historico.yml
@@ -33,7 +33,7 @@
   - level: Nivel 1
     team_achievement: 
     team:
-    - name: Rodrigo Áviles Cabrera
+    - name: Rodrigo Avilés Cabrera
       achievement: Plata
     - name: Said Huizar Dorantes
       achievement: Plata
@@ -51,7 +51,7 @@
   - level: Nivel 3
     team_achievement: 
     team:
-    - name: Itzel Aleli Rodríguez Calvillo
+    - name: Itzel Alelí Rodríguez Calvillo
       achievement: Bronce
     - name: Cinthia Camila Bravo Marmolejo
       achievement: Bronce
@@ -63,7 +63,7 @@
   - level: Nivel 1
     team_achievement: 
     team:
-    - name: Rodrigo Áviles Cabrera
+    - name: Rodrigo Avilés Cabrera
       achievement: Oro
     - name: Juan Carlos Flores Aranda
       achievement: Bronce
@@ -157,7 +157,7 @@
       achievement: Bronce
     - name: Rodrigo Guzmán Hernández
       achievement: Mención Honorífica
-    - name: Ramsés Octavio Gonzáles Ortiz
+    - name: Ramsés Octavio González Ortiz
       achievement: Bronce
   - level: Nivel 2
     team_achievement: 
