--- a/_data/onmaps_guanajuato_historico.yml
+++ b/_data/onmaps_guanajuato_historico.yml
@@ -104,7 +104,7 @@
       achievement: Bronce
   - level: 2<sup>do</sup> de secundaria
     participants:
-    - name: Erick Zavala López
+    - name: Eric Zavala López
       achievement: Bronce
     - name: Israel Bonal Rodríguez
       achievement: Plata
@@ -193,7 +193,7 @@
     participants:
     - name: Alondra Galván Patlán
       achievement: Plata
-    - name: Josué Irad Galindo de la Serna
+    - name: Josué Irad Galindo De la Serna
       achievement: Bronce
 
 - year: 2016
@@ -218,7 +218,7 @@
       achievement: Oro
   - level: 3<sup>ro</sup> de secundaria
     participants:
-    - name: Sebastián Sánchez Lara
+    - name: Sebastian Sánchez Lara
       achievement: Participación
     - name: Rubén Pérez Palacios
       achievement: Participación
@@ -260,9 +260,9 @@
       achievement: Plata
   - level: 1<sup>ro</sup> de secundaria
     participants:
-    - name: Juan Braulio Olivares Rodriguez
+    - name: Juan Braulio Olivares Rodríguez
       achievement: Plata
-    - name: Cynthia Naely Lopez Estrada
+    - name: Cynthia Naely López Estrada
       achievement: Oro
   - level: 2<sup>do</sup> de secundaria
     participants:
@@ -275,7 +275,7 @@
     - name: Isaac Pancardo Botello
       achievement: Oro
     - name: Joshua Sebastián González Torres
-      achievement: Plata
+      achievement: Bronce
 
 - year: 2019
   levels:
