--- a/_data/onmaps_guanajuato_historico.yml
+++ b/_data/onmaps_guanajuato_historico.yml
@@ -98,7 +98,7 @@
       achievement: Participación
   - level: 1<sup>ro</sup> de secundaria
     participants:
-    - name: Cristian Chacón Valdéz
+    - name: Cristian Chacón Valdez
       achievement: Bronce
     - name: Héctor Eduardo Parga Nájera
       achievement: Bronce
