--- a/_data/somos_guanajuato.yml
+++ b/_data/somos_guanajuato.yml
@@ -1527,7 +1527,7 @@
       achievement: 
       team_achievement: N/A
 
-- name: María Ximena Alvarez Martinez
+- name: María Ximena Alvarez Martínez
   years:
   - year: 2024
     olympiads:
@@ -1541,9 +1541,6 @@
       level: Nivel 1
       achievement: Bronce
       team_achievement: 
-
-- name: María Ximena Álvarez Martínez
-  years:
   - year: 2023
     olympiads:
     - olympiad: Olimpiada Mexicana de Matemáticas para Educación Básica (OMMEB)
