--- a/_data/historico/ommeb_guanajuato.yml
+++ b/_data/historico/ommeb_guanajuato.yml
@@ -1,4 +1,5 @@
 - year: 2017
+  location: Oaxtepec, Morelos
   levels:
   - level: Nivel 1
     team_achievement: 
@@ -29,6 +30,7 @@
       achievement: Bronce
 
 - year: 2018
+  location: Mérida, Yucatán
   levels:
   - level: Nivel 1
     team_achievement: 
@@ -59,6 +61,7 @@
       achievement: Mención Honorífica
 
 - year: 2019
+  location: Oaxtepec, Morelos
   levels:
   - level: Nivel 1
     team_achievement: 
@@ -89,6 +92,7 @@
       achievement: Bronce
 
 - year: 2020
+  location: Virtual
   levels:
   - level: Nivel 1
     team_achievement: Plata
@@ -119,6 +123,7 @@
       achievement: Mención Honorífica
 
 - year: 2021
+  location: Virtual
   levels:
   - level: Nivel 1
     team_achievement: 
@@ -149,6 +154,7 @@
       achievement: Participación
 
 - year: 2022
+  location: Virtual
   levels:
   - level: Nivel 1
     team_achievement: 
@@ -179,6 +185,7 @@
       achievement: Bronce
 
 - year: 2023
+  location: Virtual
   levels:
   - level: Nivel 1
     team_achievement: 
@@ -209,6 +216,7 @@
       achievement: Plata
 
 - year: 2024
+  location: Oaxtepec, Morelos
   levels:
   - level: Nivel 1
     team_achievement:
