Ubicaciones de ONMAPS agregadas

--- a/_data/historico/omm_guanajuato.yml
+++ b/_data/historico/omm_guanajuato.yml
@@ -221,7 +221,7 @@
     achievement: Plata
 
 - year: 2019
-  location: CDMX
+  location: Ciudad de México
   team:
   - name: Jesús Omar Sistos Barrón
     achievement: Oro
