--- a/_data/colaboradores.yml
+++ b/_data/colaboradores.yml
@@ -32,3 +32,8 @@
   link: https://portalcientifico.unileon.es/investigadores/97490/detalle
   thumbnail: saez.jpg
   contribution: Donó tres libros elaborados para la preparación de la Olimpiada Matemática Española en el Distrito Universitario de León.
+
+- title: Olimpiada Mexicana de Matemáticas en Baja California
+  link: https://ommbc.org/
+  thumbnail: Logo-ommbc.png
+  contribution: Donaron todo el material de su página (cerca de 50 archivos). Además, fueron una de las inspiraciones principales para la creación de esta biblioteca. Su enorme colección es profundamente bienvenida.
