--- a/_data/colaboradores.yml
+++ b/_data/colaboradores.yml
@@ -38,3 +38,9 @@
   thumbnail: Logo-ommbc.png
   contribution: Donaron todo el material de su página (cerca de 50 archivos). Además, fueron una de las inspiraciones principales para la creación de esta biblioteca. Su enorme colección es profundamente bienvenida.
 
+- name: Facultad de Ciencias Experimentales de la Universidad de Almería
+  link: https://w3.ual.es/eventos/OMERSMEALMERIA/index.html
+  thumbnail: Logo-fceual.jpg
+  contribution: Donaron el material de su página, el cual se utilza para preparar a jóvenes participantes de la Olimpiada Matemática Española.
+
+
