--- a/_config.yml
+++ b/_config.yml
@@ -19,16 +19,16 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Biblioteca Virtual Olímpica de Joshua
-email: joshua.gonzalez@cimat.mx
+email: bibliotecavirtualolimpica@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   La biblioteca de entrenamientos de la OBM Guanajuato. Construida con el propósito de recopilar, conservar, compartir y construir los conocmientos adquiridos a través de entrenamientos en las Olimpiadas de Matemáticas.
 
-domain: obmguanajuato.github.io       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
-url: https://obmguanajuato.github.io  # the base hostname and protocol for your site, e.g. http://example.com
+domain: jsgonzalez.xyz       # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
+url: https://jsgonzalez.xyz/  # the base hostname and protocol for your site, e.g. http://example.com
 baseurl: /BibliotecaVirtual/      # place folder name if the site is served in a subfolder
 
 # twitter_username: OBMGuanajuato
-github_username:  Afostyrio
+github_username: Afostyrio
 
 main-menu:
  - faq.html
