¿Quién es Joshua

--- a/_data/faqs.yml
+++ b/_data/faqs.yml
@@ -9,3 +9,6 @@
 
 - question: ¿Dónde comienzo?
   answer: Nuestro <a href="material-introductorio/" rel="noopener noreferrer" target="_self">material introductorio</a> suele ser un buen lugar para comenzar.
+
+- question: ¿Quién es Joshua y por qué es su Biblioteca?
+  answer: Joshua es un exolímpico que <a href="historia-y-colaboradores.html" rel="noopener noreferrer" target="_self">una mañana de Navidad</a> comenzó a construir esta Biblioteca. Puedes saber más de él en su <a href="https://jsgonzalez.xyz" rel="noopener noreferrer" target="_blank">página personal</a>.
