--- a/_data/selectivos/obm.yml
+++ b/_data/selectivos/obm.yml
@@ -624,6 +624,16 @@
       filename: 2024-2025 S3.Sec2.pdf
     - level: 3<sup>ro</sup> de Secundaria
       filename: 2024-2025 S3.Sec3.pdf
+  - number: 4
+    files:
+    - level: 4<sup>to</sup> y 5<sup>to</sup> de Primaria
+      filename: 2024-2025 S4.Prim4,5.pdf
+    - level: 6<sup>to</sup> de Primaria y 1<sup>ro</sup> de Secundaria
+      filename: 2024-2025 S4.Prim6, Sec1.pdf
+    - level: 2<sup>do</sup> de Secundaria
+      filename: 2024-2025 S4.Sec2.pdf
+    - level: 3<sup>ro</sup> de Secundaria
+      filename: 2024-2025 S4.Sec3.pdf
   - number: 5
     files:
     - level: 4<sup>to</sup> y 5<sup>to</sup> de Primaria
